<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora de Macros</string>
    <string name="action_settings">Settings</string>
    <string name="new_macros_text">Calcular nuevos macros  +</string>
    <string name="title_activity_macros_calculator">MacrosCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Nombre</string>
	<string-array name="sex">
  		<item>Hombre</item>
 	 	<item>Mujer</item>
	</string-array>
	<string name="age">Edad</string>
	<string name="height">Estatura</string>
	<string-array name="cm_or_inches">
  		<item>Centimetros</item>
 	 	<item>Pulgadas</item>
	</string-array>
	<string-array name="kg_or_lbs">
  		<item>Kilogramos</item>
 	 	<item>Libras</item>
	</string-array>
	<string name="weight">Peso</string>
	<string name="bodyfat">Porcentaje de grasa</string>
	<string-array name="exercise_levels">
	    <item>no hago ejercicio</item>
 	 	<item>entreno 3 veces por semana</item>
 	 	<item>entreno 4 veces por semana</item>
 	 	<item>entreno 5 veces por semana</item>
 	 	<item>entreno 6 veces por semana</item>
 	 	<item>entrenamiento intenso 5 veces por semana</item>
 	 	<item>entrenamiento 7 veces por semana</item>
 	 	<item>dos veces por dia</item>
	</string-array>
		<string-array name="fitness_goal">
  		<item>Perder Grasa</item>
 	 	<item>Mantenimiento</item>
 	 	<item>Ganar Masa Muscular</item>
	</string-array>
	<string name="calculate">Calcular</string>
	
	<string name="results">Presiona el boton de calcular para obtener tus resultados.</string>
	<string name="saveResults">Guardar Resultados</string>
	
	
	

</resources>
