<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MacrosCalculator" >

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/name" 
        android:padding="20dp"/>

    <Spinner
        android:id="@+id/sex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name" 
        android:layout_centerHorizontal="true"
        android:drawSelectorOnTop="true"
        android:entries="@array/sex"
        android:padding="10dp"/>
    
    <EditText
        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:hint="@string/age"
        android:layout_alignLeft="@id/sex"
        android:layout_below="@id/sex"
        android:padding="20dp"
         />
    
    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:inputType="number"
        android:hint="@string/height"
        android:layout_alignLeft="@id/age"
        android:layout_below="@id/age"
        android:padding="20dp"
        
         />

        <Spinner
            android:id="@+id/height_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_toRightOf="@id/height"
            android:drawSelectorOnTop="true"
            android:entries="@array/cm_or_inches" 
            android:padding="20dp"/>

        <EditText
	        android:id="@+id/weight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:ems="10" 
	        android:inputType="number"
	        android:hint="@string/weight"
	        android:layout_alignLeft="@id/height"
	        android:layout_below="@id/height"
	        android:padding="20dp"
         />
        
          <Spinner
            android:id="@+id/weight_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/height"
            android:layout_toRightOf="@id/weight"
            android:drawSelectorOnTop="true"
            android:entries="@array/kg_or_lbs" 
            android:padding="20dp"/>
          
         <EditText
	        android:id="@+id/bodyfat"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:ems="10" 
	        android:inputType="number"
	        android:hint="@string/bodyfat"
	        android:layout_alignLeft="@id/weight"
	        android:layout_below="@id/weight"
	        android:padding="20dp"
         />
         
            <Spinner
	            android:id="@+id/exercise_level"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/bodyfat"
	            android:entries="@array/exercise_levels" 
	            android:drawSelectorOnTop="true"
	            android:padding="20dp"/>
            <Spinner
	            android:id="@+id/fitness_goal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/exercise_level"
	            android:entries="@array/fitness_goal" 
	            android:drawSelectorOnTop="true"
	            android:padding="20dp"
	            />
            
            <Button 
                android:id="@+id/calculate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fitness_goal"
                android:padding="20dp"
                android:text="@string/calculate"
                android:onClick="calculateMacros"/>
            
            <TextView
                android:id="@+id/result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/calculate"
                android:padding="20dp"
                android:text="@string/results"
                android:ems="16"
                />
            
            <Button
                android:id="@+id/saveResults"
                android:layout_width="fill_parent"
        		android:layout_height="60dp"
                android:layout_below="@id/result"
                android:text="@string/saveResults"
                android:ems="20"
                android:layout_centerHorizontal="true"
        		android:background="#353535"
        		android:textColor="#FFFFFF"
        		android:onClick="saveResults" />
          
</RelativeLayout>
